feat: add pet endpoints
