# public/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "GoIT Final team project",
     "description": "GoIT Final team project",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "contact": {
       "name": "Yaroslav Bernatovych",
       "url": "https://github.com/yabr87"
@@ -569,6 +569,131 @@
           }
         }
       }
+    },
+    "/api/pets": {
+      "get": {
+        "operationId": "getPets",
+        "tags": [
+          "Pets"
+        ],
+        "summary": "Get pets",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Data successfully retrieved",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Pet"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/ValidationError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      },
+      "post": {
+        "operationId": "addPet",
+        "tags": [
+          "Pets"
+        ],
+        "summary": "Add my pet",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Pet"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Pet successfully added",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Pet"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/ValidationError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      }
+    },
+    "/api/pets/{petId}": {
+      "delete": {
+        "operationId": "removePet",
+        "tags": [
+          "Pets"
+        ],
+        "summary": "Remove pet from list",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "petId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully removed"
+          },
+          "400": {
+            "$ref": "#/components/responses/ValidationError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      }
     }
   },
   "tags": [
@@ -746,6 +871,52 @@
           "location": "Lviv",
           "price": 120,
           "comments": "Rich would be the perfect addition to an active family that loves to play and go on walks. I bet he would love having a doggy playmate too!"
+        }
+      },
+      "Pet": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Id generated by MongoDB",
+            "readOnly": true
+          },
+          "name": {
+            "type": "string",
+            "description": "Pet name"
+          },
+          "birthday": {
+            "type": "string",
+            "pattern": "\\d{2}.\\d{2}.\\d{4}",
+            "description": "Pet's birthday"
+          },
+          "breed": {
+            "type": "string",
+            "description": "Pet breed"
+          },
+          "comments": {
+            "type": "string",
+            "description": "Any comment you want"
+          },
+          "photo": {
+            "type": "string",
+            "format": "binary",
+            "writeOnly": true,
+            "description": "Pet photo"
+          },
+          "photoUrl": {
+            "type": "string",
+            "format": "uri",
+            "readOnly": true,
+            "description": "Stored photo link"
+          }
+        },
+        "example": {
+          "name": "Rich",
+          "birthday": "21.09.2020",
+          "breed": "Pomeranian",
+          "sex": "male",
+          "comments": "My lovely doggy!"
         }
       }
     },
